# sneaker-engine

./: .gitignore  README.md  kill_4200_and_8000.sh
.github/: copilot-instructions.md
backend/: .dockerignore  .env.example  Dockerfile  auth.py  auth_utils.py  copilot-backend-polyfactory-instructions.md  copilot-backend-test-instructions.md  database.py  entrypoint.sh  main.py  pyproject.toml  requirements.txt  start_backend.sh
backend/alembic/: env.py
backend/alembic/versions/: 112436bef048_add_propositions_table.py  67af63af6319_initial_migration_users_and_sneakers_.py
backend/crud/: __init__.py  proposition.py  sneaker.py  user.py
backend/models/: __init__.py  proposition.py  sneaker.py  user.py
backend/routes/: __init__.py  auth.py  propositions.py  sneakers.py  users.py
backend/schemas/: __init__.py  proposition.py  sneaker.py  user.py
backend/tests/: README.md  __init__.py  conftest.py  test_auth.py  test_factories.py  test_propositions.py  test_sneakers.py
backend/tests/factories/: __init__.py  base.py  proposition_factory.py  sneaker_factory.py  user_factory.py
frontend/: angular.json  package-lock.json
frontend/src/: styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts
terraform/: .gitignore  DEPLOY.md  README.md  acm.tf  alb.tf  deploy-all.sh  deploy-backend.sh  deploy-frontend.sh  destroy.sh  ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  provision.sh  rds.tf  route53.tf  s3.tf  security_groups.tf  terraform.tfvars.example  variables.tf  vpc.tf
(+26 files in other folders)
